corrected data - time  logic